# Local_Tour_Guide_LLM_Chatbot

./: .gitignore  README.md  pyproject.toml
chatbot/: consumer.py  routing.py  urls.py
chatbot/views/: lang.json  project_index.idx  project_index_cosine.idx  project_intent.idx  project_uncleaned_data.json  project_uncleanedintent_data.json  view_context_search.py  view_eng_to_nep.py  view_gqa.py  view_intent_search.py  view_load_lora_params.py  view_main.py  view_translation.py
core/: asgi.py  settings.py  urls.py
templates/: home.html
