[tool.poetry]
name = "ltg-django"
version = "0.1.0"
description = ""
authors = ["anjan <anjanparajuli2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
faiss-cpu = "^1.8.0.post1"
sentence-transformers = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
